--- a/index.css
+++ b/index.css
@@ -84,23 +84,9 @@ nav ul li:hover a{
      color: var(--header-tag-color);
      font-size: 20px;
   }
-  nav ul{
-     
-     display: block;
-     padding: 0;
-     padding-top: 5px;
-     justify-content: center;
-  }
-  
-  nav ul li a{
-     color: #fff; 
-  }
-  nav ul li{
-   margin-top: 25px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-  }
+ nav ul{
+    display: none;
+ }
   nav div .fa-cart-arrow-down{
      display: block;
      font-size: 22px;
