--- a/index.css
+++ b/index.css
@@ -5,8 +5,11 @@
 body{
    box-sizing: border-box;
    margin: 0;
-   padding: 0 5%;
+   
    font-family: 'Poppins', sans-serif;
+}
+main{
+   padding: 0 5%;
 }
 :root{
    --header-tag-color:#3A3A3A;
@@ -61,6 +64,10 @@ nav ul li a{
 }
 nav ul li:hover a{
    color: var(--button-color);
+   transition: all 0.2s;
+}
+nav ul li:hover i{
+   transform: scale(1.3);
    transition: all 0.2s;
 }
 
@@ -331,6 +338,7 @@ hr{
 }
 .see-more{
    color: var(--button-color);
+   cursor: pointer;
 }
 .see{
    margin-left: 91%;
@@ -441,16 +449,51 @@ hr{
       padding: 12px 120px;
    }
 }
-@media(min-width: 500px) and (max-width: 720px){
 
+/* footer section start */
+/* footer section start */
+/* footer section start */
+
+.footer{
+   margin-top: 100px;
+   background-color:  #0A0826;
+   width: 100%;
+   height: 239px;
+   text-align: center;
+}
+.footer h2{
+   padding-top: 50px;
+   margin: 0;
+   font-size: 24px;
+   font-weight: 700;
+   color: white;
+
+}
+.footer p{
+   color: white;
+   font-size: 14px;
+   margin-bottom: 0;
+}
+
+.footer-p2{
+   margin-top: 2px;
+}
+.finish-icons{
+   margin-top: 15px;
+}
+
+
+.finish-icons i{
+   border-radius: 50px;
+   font-size: 20px;
+   color: white;
+   margin: 10px;
+}
+.finish-icons i:hover{
+   transform: scale(1.3);
+   transition: all 0.3s;
 }
 
 
 
 
-
-
-
-main{
-   margin-bottom: 500px;
-}
