--- a/index.css
+++ b/index.css
@@ -65,10 +65,14 @@ nav ul li a{
 nav ul li:hover a{
    color: var(--button-color);
    transition: all 0.2s;
+   font-weight: 500;
 }
 nav ul li:hover i{
    transform: scale(1.3);
    transition: all 0.2s;
+}
+#nav-icon{
+   display: none;
 }
 
 @media(max-width:940px){
@@ -78,10 +82,10 @@ nav ul li:hover i{
      font-size: 24px;
      color: var(--header-tag-color);
   }
-  nav .menu:hover{
+  /* nav .menu:hover{
      color: var(--button-color);
      transition: all 0.2s;
-  }
+  } */
   nav{
      display: block;
      padding: 0 20px;
@@ -95,7 +99,38 @@ nav ul li:hover i{
      color: var(--header-tag-color);
      font-size: 20px;
   }
- nav ul{
+  .navigation-icon{
+    height: 500vh;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.959);
+    margin: 0;
+    padding: 0;
+    margin-top: 50px;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -50px;
+    /* transform: translateX(-450px); */
+    left: -100%;
+    position: absolute;
+    z-index: 4;
+    transition: 0.4s ease-in-out;
+   
+ }
+ #nav-icon:checked ~ .menu i:before{
+    content: "\f00d";
+    transition: 0.2s ease-in-out;
+ }
+
+ #nav-icon:checked ~ .navigation-icon{
+   left: 0%;
+   z-index: 5;
+   transition: 0.4s ease-in-out;
+ }
+
+ nav ul li{
+    margin-top: 50px;
+ }
+ .fa-cart-arrow-down{
     display: none;
  }
   nav div .fa-cart-arrow-down{
