--- a/index.css
+++ b/index.css
@@ -100,16 +100,16 @@ nav ul li:hover i{
      font-size: 20px;
   }
   .navigation-icon{
-    height: 500vh;
+    height: 500px;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.959);
     margin: 0;
     padding: 0;
-    margin-top: 50px;
+    margin-top: 30px;
     flex-direction: column;
     align-items: center;
-    margin-left: -50px;
-    /* transform: translateX(-450px); */
+    margin-left: -5px;
+    /* transform: translateY(-600px); */
     left: -100%;
     position: absolute;
     z-index: 4;
@@ -122,7 +122,7 @@ nav ul li:hover i{
  }
 
  #nav-icon:checked ~ .navigation-icon{
-   left: 0%;
+   /* left: 0%; */
    z-index: 5;
    transition: 0.4s ease-in-out;
  }
