--- a/index.css
+++ b/index.css
@@ -158,13 +158,13 @@ nav ul li:hover i{
 }
 .header-text h1{
    color: var(--header-tag-color);
-   font-size: 52px;
+   font-size: 3.7vw;
    margin: 0;
    padding: 0;
    
 }
 .header-text p{
-   font-size: 16px;
+   font-size: 1.2vw;
    font-weight: 600;
    color: var(--header-tag-color);
    margin: 0;
@@ -374,6 +374,7 @@ hr{
 .see-more{
    color: var(--button-color);
    cursor: pointer;
+   font-size: 1.2vw;
 }
 .see{
    margin-left: 91%;
@@ -448,7 +449,7 @@ hr{
 
 .third-text h2{
    color: #0A0826;
-   font-size: 30px;
+   font-size: 2.5vw;
    margin: 0;
    margin-top: 25px;
 }
@@ -457,6 +458,7 @@ hr{
    margin: 0;
    margin-top: 10px;
    font-weight: 600;
+   font-size: 1.3vw;
 }
 .third-text button{
    border-radius: 0px;
